test/src/test/k3s/test/inoa/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inoa
spec:
  rules:
    - host: inoa.${k3s.ip}.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inoa
                port:
                  name: http
