test/src/test/k3s/test/inoa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inoa
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
    - name: mqtt
      port: 1883
      targetPort: mqtt
    - name: mqtts
      port: 8883
      targetPort: mqtts
  selector:
    app.kubernetes.io/name: inoa
---
apiVersion: v1
kind: Service
metadata:
  name: inoa-lb
spec:
  type: LoadBalancer
  ports:
    - name: mqtt
      port: 1883
      targetPort: mqtt
    - name: mqtts
      port: 8883
      targetPort: mqtts
  selector:
    app.kubernetes.io/name: inoa
